client/styles.css
:root {
    /* primary colors */
    --color-primary: #5d5bed;
    --color-primary-dark: #181818;
    --color-primary-rgb: 93, 93, 237;
    --color-primary-dark-rgb: 24, 24, 24;

    /* secondary colors */
    --color-accent-1: #d7ea57;
    --color-accent-2: #f1fee0;
    --color-gray-100: #f8f8f8;
    --color-gray-300: #e0e0e0;
    --color-gray-500: #999999;
    --color-error: #eb4545;
    --color-white: #ffffff;

    /* other */
    --color-background-secondary: rgb(143, 143, 143);
    --color-background-secondary-rgb: 143, 143, 143;

    /* chart dimensions */
    /* use 100% for dynamic height */
    /* --spotcanvas-chart-height: 100%; */

    /* opacity variants */
    --color-primary-dark-50: rgba(24, 24, 24, 0.5);
    --color-primary-dark-70: rgba(24, 24, 24, 0.7);
    --color-primary-dark-95: rgba(24, 24, 24, 0.85);
    --color-primary-dark-97: rgba(24, 24, 24, 0.87);
    --color-primary-dark-98: rgba(24, 24, 24, 0.88);
    --color-background-secondary-20: rgba(143, 143, 143, 0.15);
    --color-background-secondary-30: rgba(143, 143, 143, 0.2);
    --color-modal-backdrop: rgba(0, 0, 0, 0.5);

    /* fonts */
    --font-primary: "Plus Jakarta Sans", serif;
    --font-secondary:
        "Lexend", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
        Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

.plus-jakarta-sans-font-primary {
    font-family: "Plus Jakarta Sans", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

.lexend-font-secondary {
    font-family: "Lexend", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

/* Reset body and html for mobile */
html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    position: fixed;
    overflow: hidden;
}

body {
    display: flex;
    flex-direction: column;
    font-family: var(--font-primary);
    min-height: 100vh;
    background-color: var(--color-primary-dark);
}

h1.app-header {
    margin: 0 16px;
    padding: 1rem;
    background-color: var(--color-primary-dark);
    color: var(--color-primary);
    flex: 0 0 auto;
}

/* Charts wrapper styles */
.charts-wrapper {
    width: 100%;
    height: 100%;
    position: fixed;
    display: flex;
    flex-direction: column;
    padding: env(safe-area-inset-top) env(safe-area-inset-right)
        env(safe-area-inset-bottom) env(safe-area-inset-left);
}

/* Chart container styles */
.chart-container {
    width: 100%;
    height: 50%;
    position: relative;
    flex: 1;
}

.chart-container:first-child {
    border-bottom: 1px solid rgba(143, 143, 143, 0.2);
}

